# alura-engenharia-dados

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: modulo_01_pipeline_dados.md  template_modulo.md
notebooks/modulo_01_pipeline_dados/: exploracao.ipynb
src/ed_alura/modulo_01_pipeline_dados/: fusao_mercado_fev.py  processamento_dados.py
