[project]
name = "alura-engenharia-dados"
version = "0.1.0"
description = "Repositório de evolução na trilha de Engenharia de Dados (Alura)"
authors = [
    { name = "Lucas Seixas Dias" }
]
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
