[tool.poetry]
name = "alura-engenharia-dados"
version = "0.1.0"
description = "Repositório de evolução na trilha de Engenharia de Dados"
authors = ["Lucas Seixas Dias <lseixasd@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ed_alura", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.28.2"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5"
pytest = "^8.0"
pre-commit = "^3.0"
jupyterlab = "^4.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# E → erros estilo pycodestyle
# F → erros lógicos (pyflakes)
# I → ordenação de imports
# UP → melhorias modernas de sintaxe

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
